# BnanR

./: Cargo.toml
.github/workflows/: bnan-build.yml  rust.yml
src/: assets2.bpk  main.rs
src/BnanPKG/: main.rs  meshlet_processor.rs
src/BnanR/: lib.rs
src/BnanR-Meshlet-Raster-Sample/: downsample_system.rs  main.rs  meshlet_system.rs
src/BnanR-Sample/: main.rs  simple_system.rs
src/BnanR-Sample-Shaders/: downsample.comp  simple-raster-mesh.frag  simple-raster-mesh.mesh  simple-raster-mesh.task  simple-raster.frag  simple-raster.vert  simple-raytrace.comp  simple.comp
src/BnanR-Simple-Raster-Sample/: main.rs  meshlet_system.rs  simple_system.rs
src/BnanR-Simple-Raytracing-Sample/: main.rs  simple_system.rs
src/BnanR-Simple-Sample/: main.rs  simple_system.rs
src/BnanR/core/: bnan_buffer.rs  bnan_camera.rs  bnan_descriptors.rs  bnan_device.rs  bnan_image.rs  bnan_mesh.rs  bnan_pipeline.rs  bnan_rendering.rs  bnan_swapchain.rs  bnan_window.rs  mod.rs
src/BnanR/core/bnan_render_graph/: graph.rs  mod.rs  pass.rs  resource.rs  sync.rs
src/BnanR/ecs/: component.rs  entity.rs  mod.rs  storage.rs  world.rs
src/BnanR/fs/: bpk.rs  mod.rs  streaming_buffer.rs
src/BnanR/stl/: circular_linked_list.rs  mod.rs  sparse_set.rs
src/core/: bnan_device.rs  bnan_rendering.rs  bnan_swapchain.rs  bnan_window.rs  mod.rs
src/stl/: circular_linked_list.rs  mod.rs
