[package]
name = "BnanR"
version = "0.1.0"
edition = "2024"
build = "build/main.rs"

[dependencies]
anyhow = "1.0.98"
ash = "0.38.0"
cgmath = "0.18.0"
exr = "1.73.0"
intrusive-collections = "0.9.7"
lazy_static = "1.5.0"
rayon = "1.10.0"
sdl3-sys = "0.5.2"
vk-mem = "0.4.0"

[build-dependencies]
glob = "0.3.2"
shaderc = "0.9.1"

[lib]
name = "BnanR"
path = "src/BnanR/lib.rs"

[[bin]]
name = "BnanR-Sample"
path = "src/BnanR-Sample/main.rs"
